--- a/assest/css/index.css
+++ b/assest/css/index.css
@@ -151,6 +151,7 @@ img.no-select {user-select: none; pointer-events: none;}
 .project-list{margin: 0px; display: flex; flex-wrap: wrap;     justify-content: center;
 }
 .project-cards{border-radius: 16px;background: #ffffff; width: 365px; margin: 8px; height: 590px; box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25); padding: 10px;} 
+.project-cards:hover{box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);}
 .project-header{display: flex;justify-content: space-between;}
 .project-img{width: 100%}
 .project-discription{height: 90px;}
